--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <section>
                 <h3 class="center" id="project">Projects</h3>
                 <p class="process">In process...</p>
-                
+
             </section>
         </div>
 
@@ -82,13 +82,12 @@
                 <p class="know">
                     If you would like to know more about me or my projects or just basically anything, don't hesitate to contact and let's grab a coffee to discuss more.
                 </p>
-                
-                <div>
-                    <a href="https://www.linkedin.com/in/daisy-lien-13b79a232/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-                    <a href="https://github.com/" target="_blank"><i class="fa-brands fa-github"></i></a>
-                    <a href="mailto:daisylien1211@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
-                    <a href="tel:+7148129021"><i class="fa-solid fa-square-phone"></i></a>
-                </div>
+            <p class="icon">
+                <a href="https://www.linkedin.com/in/daisy-lien-13b79a232/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://github.com/" target="_blank"><i class="fa-brands fa-github"></i></a>
+                <a href="mailto:daisylien1211@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
+                <a href="tel:+7148129021"><i class="fa-solid fa-square-phone"></i></a>
+            </p>
 
                 <div>
                 <form action="mailto:daisylien1211@gmail.com" method="POST" name="contact">
