--- a/index.html
+++ b/index.html
@@ -69,8 +69,10 @@
         <div class="two" id="stuff">
             <section>
                 <h3 class="center" id="project">Projects</h3>
-                <p class="process">In process...</p>
-
+            <div class="show">
+                <a href="http://127.0.0.1:5501/01-Class-Content/01-HTML-Git-CSS/02-Challenge/Main/index.html"><img src="./Screen Shot 2022-07-18 at 14.17.51.png"></a>
+                <p>To be continued....</p>
+            </div>
             </section>
         </div>
 
@@ -88,7 +90,7 @@
                 <a href="mailto:daisylien1211@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
                 <a href="tel:+7148129021"><i class="fa-solid fa-square-phone"></i></a>
             </p>
-
+            
                 <div>
                 <form action="mailto:daisylien1211@gmail.com" method="POST" name="contact">
                     <input type="hidden" name="form-name" value="contact">
@@ -101,6 +103,7 @@
                     <button class="send" type="submit">send message</button>
                 </form>
                 </div>
+            </div>
         </div>
 
         <footer>
