--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <link rel="stylesheet" href="./reset.css"/>
         <link rel="stylesheet" href="./style.css"/>
         <script src="https://kit.fontawesome.com/751029ca13.js" crossorigin="anonymous"></script>
-      <!-- <link rel="stylesheet" href -->
         <title> Quynh Lien </title>
     </head>
 
